* .gitignore: modified to correctly identify new file path
Added Mahout dependencies into build definition; it seeeeeeems to be working?

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ recipe_extractor/target/
 recipe_extractor/project/target
 recipe_extractor/.ensime*
 recipe_extractor/.ensime/
+extractr/target/
+extractr/project/target
+extractr/.ensime*
+extractr/.ensime/
 
 # Emacs ignores
 *~
